feat: incluindo resources para GetByCodeAsync

--- a/ChartOfAccounts.CrossCutting/Resources/ErrorMessages.resx
+++ b/ChartOfAccounts.CrossCutting/Resources/ErrorMessages.resx
@@ -120,4 +120,7 @@
   <data name="Error_ChartOfAccounts_Suggestion_LimitReached" xml:space="preserve">
     <value>Não foi possível sugerir um próximo código. Limite atingido</value>
   </data>
+  <data name="Error_ChartOfAccounts_NotFound" xml:space="preserve">
+    <value>O código {0} não foi encontrado.</value>
+  </data>
 </root>
