--- a/ChartOfAccounts.CrossCutting/Resources/ErrorMessages.resx
+++ b/ChartOfAccounts.CrossCutting/Resources/ErrorMessages.resx
@@ -123,4 +123,7 @@
   <data name="Error_ChartOfAccounts_NotFound" xml:space="preserve">
     <value>O código {0} não foi encontrado.</value>
   </data>
+  <data name="Error_ChartOfAccounts_IdempotencyConflict" xml:space="preserve">
+    <value>Houve um conflito entre a nova tentativa e o estado previamente registrado para o Idempotency-Key {0}.</value>
+  </data>
 </root>
