--- a/ChartOfAccounts.CrossCutting/Resources/ErrorMessages.resx
+++ b/ChartOfAccounts.CrossCutting/Resources/ErrorMessages.resx
@@ -126,4 +126,10 @@
   <data name="Error_ChartOfAccounts_IdempotencyConflict" xml:space="preserve">
     <value>Houve um conflito entre a nova tentativa e o estado previamente registrado para o Idempotency-Key {0}.</value>
   </data>
+  <data name="Error_ServiceUnavailable" xml:space="preserve">
+    <value>Serviço temporariamente indisponível. Tente novamente mais tarde.</value>
+  </data>
+  <data name="Error_DataIntegrityViolation" xml:space="preserve">
+    <value>Violação de Integridade de dados.</value>
+  </data>
 </root>
